--- a/ToDoList.html
+++ b/ToDoList.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>To Do List</title>
-
+    <!-- <meta charset="UTF-8"> -->
     <link rel="stylesheet" type="text/css" href="ToDoList.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1f3b2c890d.js" crossorigin="anonymous"></script>
@@ -54,7 +54,7 @@
                             <div class="container_input">
                                 <input type="text" class="input colorbarra margen" id="input"
                                     placeholder="Nueva Tarea">
-                                <button class="boton_todo colorbarra margen" id="btn_todo">A&ntilde;adir</button>
+                                <button class="boton_todo colorbarra margen" id="btn_todo">Añadir</button>
                             </div>
                         </div>
                     </div>
