añadir comentarios y valor por defecto

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -20,14 +20,14 @@
                         <h6 class="text"> Usuario:</h6>
                         <div class="col-12 d-flex justify-content-center">
                             <div class=" w-50 barra">
-                                <input type="email" class="form-control colorbarra" id="usuario"
+                                <input type="email" class="form-control colorbarra" id="usuario" value="mariapaula"
                                     placeholder="Digite su usuario">
                             </div>
                         </div>
                         <h6 class="text">Contrase&ntilde;a:</h6>
                         <div class="col-12 d-flex justify-content-center">
                             <div class=" w-50 barra">
-                                <input type="password" class="form-control colorbarra" id="Contrasena"
+                                <input type="password" class="form-control colorbarra" id="Contrasena" value="123qwe*"
                                     placeholder="Digite su contrase&ntilde;a">
                             </div>
                         </div>
