--- a/ToDoList.html
+++ b/ToDoList.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>To Do List</title>
-    <!-- <meta charset="UTF-8"> -->
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="ToDoList.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1f3b2c890d.js" crossorigin="anonymous"></script>
@@ -24,11 +24,11 @@
                                     placeholder="Digite su usuario">
                             </div>
                         </div>
-                        <h6 class="text">Contrase&ntilde;a:</h6>
+                        <h6 class="text">Contraseña:</h6>
                         <div class="col-12 d-flex justify-content-center">
                             <div class=" w-50 barra">
-                                <input type="password" class="form-control colorbarra" id="Contrasena" value="123qwe*"
-                                    placeholder="Digite su contrase&ntilde;a">
+                                <input type="password" class="form-control colorbarra" id="password" value="123qwe*"
+                                    placeholder="Digite su contraseña">
                             </div>
                         </div>
                         <div class="col-12">
@@ -52,9 +52,9 @@
                     <div class="col-12 d-flex justify-content-center">
                         <div class=" w-50 ">
                             <div class="container_input">
-                                <input type="text" class="input colorbarra margen" id="input"
+                                <input type="text" class="input colorbarra margen" id="input_Nueva_Tarea"
                                     placeholder="Nueva Tarea">
-                                <button class="boton_todo colorbarra margen" id="btn_todo">Añadir</button>
+                                <button class="boton_todo colorbarra margen" id="btn_agregar_tarea">Añadir</button>
                             </div>
                         </div>
                     </div>
